use usecase for viewmodel and provides it via  dagger , working code

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -4,16 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/_20ssp"
+    android:layout_marginStart="@dimen/_20ssp"
      >
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/userNameTxt"
+        tools:text="Manish "
+        android:padding="@dimen/_10ssp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Store Fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/signOutTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_out"
+        android:padding="@dimen/_10ssp"
+        android:layout_marginTop="@dimen/_20ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userNameTxt"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
