--- a/app/src/main/res/layout/layout_stock_details_item.xml
+++ b/app/src/main/res/layout/layout_stock_details_item.xml
@@ -1,70 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
 
     <TextView
 
-        android:id="@+id/sidTxt"
+        android:id="@+id/stockNameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/item_margin"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12ssp"
-        tools:text="HUL"
-        android:paddingStart="@dimen/_5sdp"
-        android:layout_margin="@dimen/_5sdp"
+        android:textSize="@dimen/text_size_title"
+        android:layout_marginTop="@dimen/item_margin"
+        android:layout_marginBottom="@dimen/item_margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="HUL" />
+
+    <TextView
+        android:id="@+id/priceTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/item_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/stockItemCheckBox"
+        tools:text="2222" />
 
 
     <TextView
         android:id="@+id/changePriceTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_4sdp"
-        tools:text="24"
-        android:paddingBottom="@dimen/_5sdp"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12ssp"
-        app:layout_constraintStart_toStartOf="@+id/sidTxt"
-        app:layout_constraintTop_toBottomOf="@id/sidTxt" />
+        android:layout_marginEnd="@dimen/item_margin"
+        android:textSize="@dimen/text_size_sub_title"
+        app:layout_constraintStart_toStartOf="@id/stockNameTxt"
+        app:layout_constraintBottom_toBottomOf="@+id/stockChangePriceImage"
+        app:layout_constraintTop_toTopOf="@+id/stockChangePriceImage"
+        tools:text="24" />
 
-
-    <TextView
-        android:id="@+id/priceTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        tools:text="2222"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12ssp"
-        app:layout_constraintStart_toEndOf="@+id/sidTxt"
-        app:layout_constraintTop_toTopOf="@id/sidTxt" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/stockChangePriceImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_10ssp"
         android:layout_marginStart="@dimen/_5sdp"
-        android:src="@drawable/ic_baseline_arrow_drop_up_24"
-        app:layout_constraintTop_toTopOf="@+id/priceTxt"
-        app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
-        app:layout_constraintStart_toEndOf="@+id/priceTxt"
-         />
+        android:src="@drawable/ic_up_icon"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toEndOf="@id/changePriceTxt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stockNameTxt" />
 
     <CheckBox
         android:id="@+id/stockItemCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+   />
 
 
     <View
