--- a/app/src/main/res/layout/layout_wishlist_stock_item.xml
+++ b/app/src/main/res/layout/layout_wishlist_stock_item.xml
@@ -9,7 +9,7 @@
 
     <TextView
 
-        android:id="@+id/sidTxt"
+        android:id="@+id/stockNameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
@@ -31,8 +31,8 @@
         android:paddingBottom="@dimen/_5sdp"
         android:textColor="@color/black"
         android:textSize="@dimen/_12ssp"
-        app:layout_constraintStart_toStartOf="@+id/sidTxt"
-        app:layout_constraintTop_toBottomOf="@id/sidTxt" />
+        app:layout_constraintStart_toStartOf="@+id/stockNameTxt"
+        app:layout_constraintTop_toBottomOf="@id/stockNameTxt" />
 
 
     <TextView
@@ -43,8 +43,8 @@
         tools:text="2222"
         android:textColor="@color/black"
         android:textSize="@dimen/_12ssp"
-        app:layout_constraintStart_toEndOf="@+id/sidTxt"
-        app:layout_constraintTop_toTopOf="@id/sidTxt" />
+        app:layout_constraintStart_toEndOf="@+id/stockNameTxt"
+        app:layout_constraintTop_toTopOf="@id/stockNameTxt" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/stockChangePriceImage"
@@ -53,7 +53,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_10ssp"
         android:layout_marginStart="@dimen/_5sdp"
-        android:src="@drawable/ic_baseline_arrow_drop_up_24"
+        android:src="@drawable/ic_up_icon"
         app:layout_constraintTop_toTopOf="@+id/priceTxt"
         app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
         app:layout_constraintStart_toEndOf="@+id/priceTxt"
