--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/userNameTxt"
         tools:text="Manish "
-        android:padding="@dimen/_10ssp"
+        android:textSize="@dimen/text_size_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
